<resources>
    <string name="app_name">MaskCheck</string>
    <string name="check_your_mask">Check your FFP2 mask</string>
    <string name="start">Start</string>
    <string name="references">References</string>
    <string name="title_activity_check_list">CheckListActivity</string>
    <string name="markings">Check if your mask is marked with ALL the following elements:</string>
    <string name="next">Next</string>
    <string name="brand">Brand or model</string>
    <string name="celogo">CE Logo followed by 4 digits</string>
    <string name="ffp2NR">FFP2 NR</string>
    <string name="en1492001">EN 149:2001</string>
    <string name="notFFP2">Your mask is not a FFP2 type with high certainty.</string>
    <string name="check_other_standards">Check if your mask or its case includes ANY of the following elements:</string>
    <string name="none_above">None of the above</string>
    <string name="isFFP2">Your mask is a FFP2 type with high certainty.</string>
    <string name="exit">Exit</string>
    <string name="explanation">Please observe your mask and its case. In the following screens you will be prompted to fill several checkboxes depending on what you see printed on your mask. Follow the steps to check that your mask is a valid FFP2 type. You can also use the automatic function that will check all the fields for you by taking a photo of your mask.</string>
    <string name="other_standard">"but it may be another standard not approved by the EU. "</string>
    <string name="non_marked">The mask doesn\'t have any markings</string>
    <string name="is_marked">Does the mask have any kind of markings on it or its case? (brand, CE logo, etc.)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_one_option">Please fill yes or no</string>
    <string name="falseFFP2">Your mask is FALSE with a high certainty. Please discard it and reclaim a valid one.</string>
    <string name="g2626">Your mask is from the KN95 chinese standard which has not been approved by the EU. Your mask or case should have the marking \"G2626:2006 KN95\" or \"G2626:2019\"</string>
    <string name="niosh">Your mask may be from the standard NIOSH N95. Check that the mask contains ALL of the following: manufacturer, model, NIOSH logo and N95 or n99. You can check if it\'s valid at www.cdc.gov.</string>
    <string name="camera">Camera</string>
    <string name="validate">Validate</string>
    <string name="other_standard_or_false">Your mask may be from a non UE standard or false. Please verify it manually with the checklist.</string>
</resources>
